# amcl-rn

./: .eslintrc.js  .gitignore  .prettierrc.js  README.md  index.js  metro.config.js  package.json
android/: settings.gradle
android/app/: CMakeLists.txt  _BUCK  build.gradle
android/app/src/debug/java/com/amclrn/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: amcl_bls_jni.c
android/app/src/main/java/com/amclrn/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/amclrn/crypto/: BlsModule.java  BlsPackage.java
android/app/src/main/jniLibs/include/: amcl.h  big_384_29.h  ecdh_BLS381.h  mpin_BLS381.h  version.h
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/amclrn/: AppDelegate.m  Info.plist
ios/amclrn.xcodeproj/: project.pbxproj
ios/amclrn.xcodeproj/xcshareddata/xcschemes/: amclrn-tvOS.xcscheme  amclrn.xcscheme
ios/amclrn/Base.lproj/: LaunchScreen.xib
ios/amclrnTests/: amclrnTests.m
src/: App.tsx  app.json
src/components/: CryptoShowcase.tsx  Form.style.ts  Form.tsx  Root.style.ts  Root.tsx
src/redux/: configureStore.ts  rootReducer.ts  state.ts  types.ts  utils.ts
src/selectors/: base.ts
